--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,7 +9,6 @@
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
     crossorigin=""/>
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-20nQCchB9co0qIjGwZZlgsXwSwnqrQLg5IAQ9L' + "'" + 'aqrDWS0="
     crossorigin=""></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@1.0.1"></script>
@@ -749,6 +748,7 @@
                                     </svg>
                                     Export
                                 </button>
+                                <div id="export-feedback" class="text-sm mt-2"></div>
                             </div>
                         </div>
                         
